# olympia

./: .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  GOLDEN_FILES.md  HISTORY.md  MODERNIZING.md  OLYTAG.md  README.md  build32.sh
g1/: Makefile
g1/cmd/: acct.c  conv.c  j  percent.c  rep.c  rp.sh  u.c  z.c
g1/design/: Beast  Beta  Cache  Cmd  Combat  Combat.old  Combat2  Econ  Etc  Farming  Garrison  Gold  Idea  Magic  Magic.limit  Mythology  NPC  Name  New  Numbering  Polit  Quest  Religion  Savage  Skills  Sublocs  Title  Trade  Yum  combat.doc  j  old_skill_intro  srt
g1/etc/: Banner-  Magic
g1/mapgen/: Makefile  README  as  as2  as3  compat.c  compat.h  count.c  gate  mapgen.c  road  shuffle.c  z.c  z.h
g1/src/: Changes  Makefile  Memory  Todo  alchem.c  art.c  basic.c  beast.c  build.c  buy.c  c1.c  c2.c  combat.c  day.c  dir.c  display.c  eat.c  faery.c  immed.c  input.c  io.c  loop.h  main.c  make.c  move.c  necro.c  npc.c  oly.h  order.c  perm.c  produce.c  report.c  savage.c  seed.c  sout.c  sout.h  stack.c  storm.c  summary.c  swear.c  (+4 more)
g1/src/lib/: item  master  misc  skill
g1/src/lib/fact/: 204  207
g1/src/lib/log/: 200
g1/src/lib/lore/121/: 9505
g1/src/lib/lore/122/: 9591
g1/src/lib/lore/123/: 9508  9530
g1/src/lib/lore/124/: 9515  9536
g1/src/lib/lore/126/: 9551
g2/: Change  DO  G2-IgnoredSuggestions  Idea  SuggestedFix
g2/cmd/: scanner
g2/etc/: Banner  times.template
g2/mapgen/: Makefile  Small  Small.2  Small.q  gate  old-gates  road
g2/newlib/: item  skill  system
g2/newlib/fact/: 200  202  203
g2/newlib/log/: 812
g2/newlib/lore/121/: 9505  9579  9580
g2/newlib/lore/122/: 9519  9520  9521
g2/newlib/lore/123/: 9506  9507  9517
g2/newlib/lore/124/: 124  9538
g2/newlib/lore/125/: 125
g2/newlib/lore/126/: 9573  9584
g2/newlib/lore/129/: 9564
g2/newlib/lore/150/: 9302  9304
g2/newlib/lore/160/: 9101  9175  9178
g2/newlib/lore/161/: 9124  9134
g2/newlib/lore/162/: 9141  9151  9167
g2/newlib/lore/163/: 9112
g2/newlib/lore/164/: 9144
g2/newlib/lore/165/: 9181
g2/newlib/lore/etc/: 9001  9002  9003  9004  9005  9006
g2/src/: Changes  Credits  Docs  Done  FIX  G2  G2.nope  G2.prev  Makefile  New  Skill  Todo  alchem.c  art.c  basic.c  beast.c  build.c  buy.c  c1.c  c2.c  check.c  combat.c  day.c  design  dir.c  display.c  eat.c  etc.h  faery.c  garr.c  gm.c  immed.c  input.c  io.c  main.c  make.c  move.c  necro.c  npc.c  oly.h  (+18 more)
g2/src/Make-skill-html/: s  split.c  t
g2/src/lib/: factions  forward  gate  ht-passwords  item  master  misc  players  remind  road  ship  skill  system  times_0  times_rumor  totimes  unform
g2/src/lib.orig/: gate  item  misc  skill
g2/src/lib.orig/fact/: 206
g2/src/lib.orig/log/: 202  301
g2/src/lib/fact/: 100  200  202  203  204  205  206  207  210  50106  50157  50162  50174  50229  50278  50333  50353  50428  50447  50535  50557  50612  50615  50653  50696  50739  50762  50765  50786  50797  50822  50837  50958  50962  51035  51045  51105  51115  51167  51176  (+119 more)
g2/src/lib/html/: 100.html  ak5.html  ap5.html  ap7.html  ba3.html  bh7.html  cb5.html  ce4.html  cg5.html  cj2.html  cn3.html  cy9.html  df7.html  dh3.html  dp9.html  dq4.html  ds2.html  dt2.html  eb7.html  em8.html  ep2.html  ep7.html  ew7.html  fc3.html  fd3.html  fd5.html  fh7.html  fk9.html  fv6.html  fx7.html  fy4.html  gf9.html  ha3.html  hc8.html  hd3.html  hv2.html  index.html  jr7.html  ju5.html  ka9.html  (+65 more)
g2/src/lib/log/: 100  200  202  203  204  205  206  207  210  50106  50157  50162  50174  50229  50278  50333  50353  50428  50447  50535  50557  50612  50615  50653  50696  50739  50762  50765  50786  50797  50822  50837  50958  50962  51035  51045  51105  51115  51167  51176  (+119 more)
g2/src/lib/orders/: 100  204  205  50106  50229  50278  50333  50353  50535  50557  50615  50696  50739  50765  50797  50837  51167  51176  51305  51323  51372  51454  51473  51478  51516  51632  51665  51695  51812  51835  51853  51896  52412  52468  52578  52586  52606  53013  53198  53249  (+50 more)
g3/: LICENSE  Olympia.vcxproj  Olympia2 2010.sln  Utils.sln  g2rep.vcxproj  olylib.vcxproj
g3/entab/: Program.cs  entab.csproj
g3/entab/Properties/: AssemblyInfo.cs
g3/g2rep/: Makefile  rep.c
g3/include/impl/: unistd.h
g3/mapgen/: Cities  Land  Makefile  Map  Map2  Regions  Small-  Small.3  Start  archipelago  island.c  mapgen.c  z.h
g3/olygui/: olygui.sln
g3/olygui/mapgui/: Coord.cs  Haven.cs  Havens  Land.cs  Map  MapGUI.Designer.cs  MapGUI.cs  Program.cs  Region.cs  Regions  Tag.cs  Tile.cs  mapgui.csproj
g3/olygui/mapgui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
g3/olygui/olygui/: GameSettings.Designer.cs  GameSettings.cs  MailSettings.Designer.cs  MailSettings.cs  Olympia.Designer.cs  Olympia.cs  OlympiaG3.csproj  Program.cs  RepOrders.Designer.cs  RepOrders.cs  Settings.cs  StartingCity.cs  SubmitOrders.Designer.cs  SubmitOrders.cs  cZip.cs  getmail.ini
g3/olygui/olygui/MIME/: Attachment.cs
g3/olygui/olygui/POP3/: POPClient.cs
g3/olygui/olygui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
g3/olylib/: dirent.c
g3/olympia/: Makefile  add.c  adv.c  alchem.c  art.c  basic.c  beast.c  build.c  buy.c  c1.c  c2.c  check.c  cloud.c  code.c  combat.c  day.c  dir.c  dir.h  display.c  eat.c  etc.h  faery.c  garr.c  gate.c  glob.c  gm.c  hades.c  immed.c  input.c  io.c  loop.h  lore.c  main.c  make.c  move.c  necro.c  npc.c  oly.h  order.c  perm.c  (+21 more)
g3/sendmail/: Program.cs  Settings.cs  sendmail.csproj  sendmail.ini
g3/sendmail/Properties/: AssemblyInfo.cs
run/g1/: mapgen.sh  oly.sh
run/g1/oly/lib/: loc  system
tag/: LICENSE
tag/new/: README  item
tag/src/: Makefile  add.c  basic.c  build.c  c1.c  c2.c  check.c  code.c  combat.c  day.c  display.c  eat.c  faery.c  garr.c  gate.c  glob.c  gm.c  hades.c  immed.c  io.c  main.c  move.c  npc.c  oly.h  order.c  perm.c  quest.c  report.c  sout.c  sout.h  storm.c  times.c  u.c  z.c  z.h
tests/: CMakeLists.txt  README.md
tests/g1/mapgen/: CMakeLists.txt  test_golden.sh
(+2791 files in other folders)
