# Test suite for Olympia game variants
#
# This directory contains automated tests for the various Olympia game engines.
# Tests are organized by variant (G1, G2, G3, TAG) and component.

# G1 tests
add_subdirectory(g1/mapgen)

# Additional test directories can be added here as needed:
# add_subdirectory(g2/mapgen)
# add_subdirectory(g3/mapgen)
# add_subdirectory(tag)
